--- a/aprendizaje/pubspec.yaml
+++ b/aprendizaje/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  video_player: ^2.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,6 +69,27 @@ flutter:
     - assets/7.png
     - assets/8.png
     - assets/9.png
+    - assets/SumasYRestas.png
+    - assets/ApliSumaYResta.png
+    - assets/RestaDosCifras.png
+    - assets/CantidadObjetos.png
+    - assets/VideoTema2.mp4
+    - assets/Ejer1.jpg
+    - assets/Ejer2.jpg
+    - assets/Ejer3.jpg
+    - assets/Ejer4.jpg
+    - assets/ApliSumYRes.mp4
+    - assets/Ejer2-1.jpg
+    - assets/Ejer2-2.jpg
+    - assets/Ejer2-3.jpg
+    - assets/Ejer2-4.jpg
+    - assets/Ejer3-1.png
+    - assets/Ejer3-2.png
+    - assets/Ejer3-3.png
+    - assets/Ejer3-4.png
+    - assets/ObjDiferent.mp4
+    - assets/respuestas/Ejer4-1.jpg
+  
   # To add assets to your application, add an assets section, like this:
 
   #   - images/a_dot_burr.jpeg
