--- a/aprendizaje/pubspec.yaml
+++ b/aprendizaje/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   flutter_native_splash: ^2.3.4
   animated_splash_screen: ^1.3.0
   video_player: ^2.4.0
-  image_picker: ^1.0.4
+  #image_picker: ^1.0.4
 
 dev_dependencies:
   
