--- a/aprendizaje/pubspec.yaml
+++ b/aprendizaje/pubspec.yaml
@@ -111,6 +111,9 @@ flutter:
     - assets/respuestas/Ejer4-2.jpg
     - assets/respuestas/Ejer4-3..jpg
     - assets/ProfilePhotos/ProfilePhoto.png
+    - assets/repasoDiv.png
+    - assets/divisiones.png
+
   # To add assets to your application, add an assets section, like this:
 
   #   - images/a_dot_burr.jpeg
