--- a/aprendizaje/pubspec.yaml
+++ b/aprendizaje/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,6 +39,7 @@ dependencies:
   flutter_native_splash: ^2.3.4
   animated_splash_screen: ^1.3.0
   video_player: ^2.4.0
+  flare_flutter: ^3.0.0
   #image_picker: ^1.0.4
 
 dev_dependencies:
@@ -113,6 +115,7 @@ flutter:
     - assets/ProfilePhotos/ProfilePhoto.png
     - assets/repasoDiv.png
     - assets/divisiones.png
+    - assets/splash.gif
 
   # To add assets to your application, add an assets section, like this:
 
